--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
     <body id="index">
       <header>
-        <h1><a href="" target="_blank">MadCrafter</a></h1>
+        <h1><a href="" target="_self">MadCrafter</a></h1>
       </header>
       <nav class="navbar navbar-expand-md">
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
           <span class="navbar-togger-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="main-navigaion">
+        <div class="collapse navbar-collapse" id="main-navigation">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_blank">Link 1</a>
+              <a class="nav-link" href="#" target="_self">Link 1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_blank">Link 2</a>
+              <a class="nav-link" href="#" target="_self">Link 2</a>
             </li>
-            <li class-"nav-item">
-              <a class="nav-link" href="#" target="_blank">Link 3</a>
+            <li class="nav-item">
+              <a class="nav-link" href="https://madcrafter-store.tebex.io/" target="_blank">Store</a>
             </li>
           </ul>
         </div>
@@ -37,6 +37,7 @@
 
       <div id="index-content">
 
+      </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
