Added other sites

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body id="index">
       <header>
-        <h1><a href="" target="_self">MadCrafter</a></h1>
+        <h1><a href="index.html" target="_self">MadCrafter</a></h1>
       </header>
       <nav class="navbar navbar-expand-md">
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
@@ -22,14 +22,14 @@
         </button>
         <div class="collapse navbar-collapse" id="main-navigation">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#" target="_self">Link 1</a>
+            <li onclick="location.href = 'info.html';" class="nav-item">
+              Information
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" target="_self">Link 2</a>
+            <li onclick="location.href = 'news.html';" class="nav-item">
+              News
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://madcrafter-store.tebex.io/" target="_blank">Store</a>
+            <li onclick="location.href = 'https://madcrafter-store.tebex.io/';" class="nav-item">
+              Store
             </li>
           </ul>
         </div>
