--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       </nav>
 
       <div id="index-content">
-
+        <div id="opening">
+          <img src="img/spawn.png" width=40% height=inherit title="spawn">
+          <p>This will be the place you spawn</p>
+        </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
