change of subject

--- a/news.html
+++ b/news.html
@@ -22,8 +22,8 @@
         </button>
         <div class="collapse navbar-collapse" id="main-navigation">
           <ul class="navbar-nav">
-            <li onclick="location.href = 'info.html';" class="nav-item">
-              Information
+            <li onclick="location.href = 'staff.html';" class="nav-item">
+              Our staff
             </li>
             <li onclick="location.href = 'news.html';" class="nav-item">
               News
