--- a/staff.html
+++ b/staff.html
@@ -9,10 +9,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="//dunb17ur4ymx4.cloudfront.net/webstore/logos/635d975b449de82c635269e353f674bb42222b64.png" type="image/x-icon">
-          <title>MadCrafter | Information</title>
+          <title>MadCrafter | Our staff</title>
     </head>
 
-    <body id="info">
+    <body id="staff">
       <header>
         <h1><a href="index.html" target="_self">MadCrafter</a></h1>
       </header>
@@ -22,7 +22,7 @@
         </button>
         <div class="collapse navbar-collapse" id="main-navigation">
           <ul class="navbar-nav">
-            <li onclick="location.href = 'info.html';" class="nav-item">
+            <li onclick="location.href = 'staff.html';" class="nav-item">
               Information
             </li>
             <li onclick="location.href = 'news.html';" class="nav-item">
@@ -35,7 +35,7 @@
         </div>
       </nav>
 
-      <div id="info-content">
+      <div id="staff-content">
 
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
