--- a/staff.html
+++ b/staff.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="main-navigation">
           <ul class="navbar-nav">
             <li onclick="location.href = 'staff.html';" class="nav-item">
-              Information
+              Our staff
             </li>
             <li onclick="location.href = 'news.html';" class="nav-item">
               News
